add revored to swagger api key list
